# mittari-server

./: .env.template  docker-compose.yml  pyproject.toml
app/: SensorManager.py  WSConnectionManager.py  config.py  main.py  util.py
